Fixed nested query problem
